--- a/app.json
+++ b/app.json
@@ -33,6 +33,14 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "fast-food",
+          "organization": "student-is5"
+        }
       ]
     ],
     "experiments": {
